Added Graphic to SRS Document

--- a/Documentation/SRS/tex/SRS.tex
+++ b/Documentation/SRS/tex/SRS.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
 \usepackage{hyperref}
+\usepackage{graphicx}
 
 \title{Project Requirements}
 \author{Balz Aschwanden, Raoul Grossenbacher, Florian Jörg}
@@ -102,6 +103,13 @@
 \end{itemize}
 
 \section{Use cases}
+\subsection*{Use case diagram}
+\begin{center}
+	\includegraphics[width=400bp]{UseCases.png}
+\end{center}
+
+
+
 \subsection*{Register account}
 \begin{itemize}
 	\item Actors
