Updat SRS with user descritption and use case diagram.

--- a/Documentation/SRS/tex/SRS.tex
+++ b/Documentation/SRS/tex/SRS.tex
@@ -26,10 +26,12 @@
   	\item Changed user called \textit{student} to \textit{tenant}
   	\item Changed functional requirements for advertisements
   \end{itemize} \\ \hline
-  0.02 & October & 
+  0.02 & October 26. 2014 & 
   \begin{itemize}
   	\item Added minimal information requirement to use case \textit{Generate Advertisement}
   	\item Added use case \textit{Login}
+  	\item Updated use case diagram
+  	\item Changed actor description to clarify that they are indeed the same person
   \end{itemize} \\ \hline
   0.03 & & \\ \hline
   0.04 & & \\ \hline
@@ -66,6 +68,7 @@
 
 \section{Overall description}
 \subsection*{Actor characteristics}
+There is only one user class. But this class can have two different roles depending on whether ore not the are the owner of an advertisement or a person looking for a room/flat.
 \begin{itemize}
   \item Advertiser
     \begin{itemize}
