--- a/Documentation/SRS/tex/SRS.tex
+++ b/Documentation/SRS/tex/SRS.tex
@@ -33,8 +33,14 @@
   	\item Updated use case diagram
   	\item Changed actor description to clarify that they are indeed the same person
   \end{itemize} \\ \hline
-  0.03 & & \\ \hline
-  0.04 & & \\ \hline
+  1.0 & December 10. 2014 & 
+  \begin{itemize}
+    \item Updated information needed for a valide advertisement: Expiration date removed
+    \item Some of the vocabulary has been adjusted to match the descritpions used in the web service
+    \item Changed subsection \textit{Change Advertisement}: Adverts do not need a edit mode. This is taken into account.
+    \item Due to time constraints, the use cases \textit{Rank promising tenants (Advertiser)}, \textit{Rank interesting advertisements (Tenant)} and \textit{Tenant is no longer interested in ad} have been deleted.
+  \end{itemize}\\ \hline
+
 \end{tabular}
 
 \section{Introduction}
@@ -96,7 +102,6 @@ There is only one user class. But this class can have two different roles depend
     \item Room/Apratement size
     \item Number of current inhabitants
     \item Address
-    \item Expiration date (can be prolonged)
     \item Pictures
     \item Descritpion (free text)
     \item Area map
@@ -163,7 +168,7 @@ There is only one user class. But this class can have two different roles depend
 		\end{itemize}
 	\item Trigger
 		\begin{itemize}
-			\item Click the "create new account" button
+			\item Click the "register" button
 		\end{itemize}
 	\item Pre-Condition
 		\begin{itemize}
@@ -196,7 +201,7 @@ There is only one user class. But this class can have two different roles depend
 		\end{itemize}
 	\item Trigger
 		\begin{itemize}
-			\item The event is initialized by pressing the button "new advertisement"
+			\item The event is initialized by pressing the button "create advert"
 		\end{itemize}
 	\item Pre-Condition
 		\begin{itemize}
@@ -215,7 +220,7 @@ There is only one user class. But this class can have two different roles depend
 					\end{itemize}
 					\item The advertiser is free to give additional information if required
 				\end{itemize}
-			\item The ad is visible in "my ads" on the advertisers page
+			\item The ad is visible in "my adverts" on the advertisers page
 			\item The ad is visible for other users and can be searched for
 		\end{itemize}
 	\item Main Scenario
@@ -226,6 +231,7 @@ There is only one user class. But this class can have two different roles depend
 			\item He is redirected to his home
 		\end{itemize}
 \end{itemize}
+
 \subsection*{Change Advertisement}
 \begin{itemize}
 	\item Actors
@@ -254,9 +260,10 @@ There is only one user class. But this class can have two different roles depend
 	\item Main Scenario
 		\begin{itemize}
 			\item A advertiser realizes, he has forgotten an important information in his advertisement or that it is about to be expired
-			\item He logges on to his account, finds the ad in question and clicks "edit"
+			\item He logges on to his account, finds the ad in question and clicks on it
 			\item The edit view is opened and he can make his modifications and prolong the ad
-			\item He submits the changed form and is brought back to his home screen
+			\item He submits the changed form and is shown a confirmation
+			\item The ad is alway in edit mode for its owner.
 		\end{itemize}
 \end{itemize}
 \subsection*{Search advertisements}
@@ -322,20 +329,7 @@ There is only one user class. But this class can have two different roles depend
 		\end{itemize}
 \end{itemize}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-\subsection*{Contacting Advertiser}
+\subsection*{Show interest in advertisement}
 \begin{itemize}
   \item Actors
     \begin{itemize}
@@ -344,11 +338,11 @@ There is only one user class. But this class can have two different roles depend
     \end{itemize}
   \item Description
     \begin{itemize}
-      \item Tenant is interested in advertisment and wants to contact advertiser to arrange visite.
+      \item Tenant is interested in advertisment and wants to show it.
     \end{itemize}
  \item Trigger
     \begin{itemize}
-      \item Tenant clicks “interested button” an advertisement
+      \item Tenant clicks “show interested" button in advertisement
     \end{itemize}
   \item Pre-conditions
     \begin{itemize}
@@ -364,7 +358,40 @@ There is only one user class. But this class can have two different roles depend
     \end{itemize}
   \item Main Scenario
     \begin{itemize}
-      \item Tenants clicks “interested” button
+      \item Tenants clicks “show interest” button
+      \item Advertiser receives notification
+    \end{itemize}
+\end{itemize}
+
+\subsection*{Contact advertiser}
+\begin{itemize}
+  \item Actors
+    \begin{itemize}
+      \item Advertiser
+      \item Tenant
+    \end{itemize}
+  \item Description
+    \begin{itemize}
+      \item Tenant is interested in advertisment and wants to contact advertiser.
+    \end{itemize}
+ \item Trigger
+    \begin{itemize}
+      \item Tenant clicks “contact" button in advertisement
+    \end{itemize}
+  \item Pre-conditions
+    \begin{itemize}
+    \item Tenant is logged in.
+    \item Advertisement is open (not closed or expired)
+    \item Tenant and Advertiser have valid email addresses
+    \end{itemize}
+  \item Post-conditions
+    \begin{itemize}
+      \item Interest is displayed in web app for advertiser
+      \item Advertiser receives notification email
+    \end{itemize}
+  \item Main Scenario
+    \begin{itemize}
+      \item Tenants clicks “contact” button
       \item Advertiser receives notification
     \end{itemize}
 \end{itemize}
@@ -382,7 +409,7 @@ There is only one user class. But this class can have two different roles depend
     \end{itemize}
   \item Trigger
     \begin{itemize}
-      \item Advertiser receives notification (See other use case)
+      \item Tenant clicks the "show interest" button (See other case)
     \end{itemize}
   \item Pre-Condition
     \begin{itemize}
@@ -392,9 +419,7 @@ There is only one user class. But this class can have two different roles depend
   \item Post-Condition
     \begin{itemize}
       \item Tenant receives invitation email
-      \item message is marked as “invited” (Advertiser)
-      \item "Doodle" is generaded
-      \item "Doodle" has expiration date  
+      \item If the tenant agrees to the date, an event for both parties is generated
     \end{itemize}
   \item Main Scenario
     \begin{itemize}
@@ -404,7 +429,6 @@ There is only one user class. But this class can have two different roles depend
       \item ... and select time slots for visite
       \item Click “send”
       \item Notification email is send to tenant 
-      \item Message is marked as “invided”
     \end{itemize}
   \end{itemize}
 
@@ -446,109 +470,38 @@ There is only one user class. But this class can have two different roles depend
     \end{itemize}
 \end{itemize}
 
-
-
-
-
-
-\subsection*{Rank promising tenants (Advertiser)}
-\begin{itemize}
-	\item Actors
-		\begin{itemize}
-			\item Advertiser
-		\end{itemize}
-	\item Description
-		\begin{itemize}
-			\item The advertiser has an overview over all the tenants who are interested in one of his ads. He can arrange them to his liking, sorting them to by the most promising candidate.
-		\end{itemize}
-	\item Trigger
-		\begin{itemize}
-			\item Advertiser changes to the appropriate view and moves a tenant in his list to another position (Drag and Drop)
-		\end{itemize}
-	\item Pre-Condition
-		\begin{itemize}
-			\item Tenants show a serious interest in an advertisement (Click the appropriate button)
-			\item Advertisement is still open
-			\item Advertiser is logged in and in appropriate view
-		\end{itemize}
-	\item Post-Condition
-		\begin{itemize}
-			\item List order of interested tenants is updated
-		\end{itemize}
-	\item Main Scenario
-		\begin{itemize}
-			\item A advertiser receives multiple interests for one ad. He has a preference for his property and wants the list of interested tenants to reflect this.
-			\item He can move tenants in his list to other positions
-		\end{itemize}
-\end{itemize}
-
-\subsection*{Rank interesting advertisements (Tenant)}
-\begin{itemize}
-	\item Actors
-		\begin{itemize}
-			\item Tenants
-		\end{itemize}
-	\item Description
-		\begin{itemize}
-			\item A tenant is interested in several offers. He has preferences and wants the list of his bookmarks to reflect that.
-		\end{itemize}
-	\item Trigger
-		\begin{itemize}
-			\item Dragging and dropping a bookmarked ad to another position
-		\end{itemize}
-	\item Pre-Condition
-		\begin{itemize}
-			\item Ad is open
-			\item Ad is bookmarked
-			\item Tenant is logged in
-		\end{itemize}
-	\item Post-Condition
-		\begin{itemize}
-			\item List order of bookmarked adds is updated
-		\end{itemize}
-	\item Main Scenario
-		\begin{itemize}
-			\item A tenant logs in for his first search
-			\item He bookmarks several ads
-			\item He sees a list with all his bookmarks
-			\item By dragging and dropping, he can arrange them according to his liking
-			\item The first few ads will show up on his main page
-		\end{itemize}
-\end{itemize}
-
-
-\subsection*{Tenant is no longer interested in ad}
-\begin{itemize}
-	\item Actors
-		\begin{itemize}
-			\item Tenant
-		\end{itemize}
-	\item Description
-		\begin{itemize}
-			\item A tenant changes his opinion and an ad he bookmarked or even declared a serious interest in (contacted the advertiser) is no longer seen as desirable. He therefore wants to remove the ad from his bookmarks
-		\end{itemize}
-	\item Trigger
-		\begin{itemize}
-			\item Clicking the appropriate button
-		\end{itemize}
-	\item Pre-Condition
-		\begin{itemize}
-			\item Ad is bookmarked
-			\item Ad is open
-			\item User is logged in
-		\end{itemize}
-	\item Post-Condition
-		\begin{itemize}
-			\item Ad is no longer listed under bookmarked ads
-			\item If the tenant has contacted the advertiser, the second is notified about the change
-		\end{itemize}
-	\item Main Scenario
-		\begin{itemize}
-			\item A tenant has received more information about a bookmarked ad and decides that he is no longer interested in it.
-			\item He selects the ad.
-			\item He clicks the button that removed
-		\end{itemize}
-\end{itemize}
+%\subsection*{Tenant is no longer interested in ad}
+%\begin{itemize}
+%	\item Actors
+%		\begin{itemize}
+%			\item Tenant
+%		\end{itemize}
+%	\item Description
+%		\begin{itemize}
+%			\item A tenant changes his opinion and an ad he bookmarked or even declared a serious interest in (contacted the advertiser) is no longer seen as desirable. He therefore wants to remove the ad from his bookmarks
+%		\end{itemize}
+%	\item Trigger
+%		\begin{itemize}
+%			\item Clicking the appropriate button
+%		\end{itemize}
+%	\item Pre-Condition
+%		\begin{itemize}
+%			\item Ad is bookmarked
+%			\item Ad is open
+%			\item User is logged in
+%		\end{itemize}
+%	\item Post-Condition
+%		\begin{itemize}
+%			\item Ad is no longer listed under bookmarked ads
+%			\item If the tenant has contacted the advertiser, the second is notified about the change
+%		\end{itemize}
+%	\item Main Scenario
+%		\begin{itemize}
+%			\item A tenant has received more information about a bookmarked ad and decides that he is no longer interested in it.
+%			\item He selects the ad.
+%			\item He clicks the button that removed
+%	\end{itemize}
+%\end{itemize}
 
 
 %\subsection*{Usecase - Template}
